rename collection to usersCollection