@@ -15,17 +15,16 @@ import static org.junit.jupiter.api.Assertions.*;
 
 public class FongoTests {
 
-    private Fongo fongo;
     private MongoClient mongoClient;
     private MongoDatabase database;
-    private MongoCollection<Document> collection;
+    private MongoCollection<Document> usersCollection;
 
     @BeforeEach
     void setUp() {
-        fongo = new Fongo("mockDB");
+        Fongo fongo = new Fongo("mockDB");
         mongoClient = fongo.getMongo();
         database = mongoClient.getDatabase("testDB");
-        collection = database.getCollection("users");
+        usersCollection = database.getCollection("users");
     }
 
     @AfterEach
@@ -38,8 +37,8 @@ public class FongoTests {
     void find_whenDocExists_returnsDocument() {
         Document doc = new Document("name", "Alice").append("age", 25);
 
-        collection.insertOne(doc);
-        Document found = collection.find(new Document("name", "Alice")).first();
+        usersCollection.insertOne(doc);
+        Document found = usersCollection.find(new Document("name", "Alice")).first();
 
         assertNotNull(found, "Expected to find a document with name 'Alice'");
         assertEquals("Alice", found.getString("name"), "Name should be 'Alice'");
@@ -48,20 +47,20 @@ public class FongoTests {
 
     @Test
     void find_whenDocDoesNotExist_returnsNull() {
-        Document found = collection.find(new Document("name", "Bob")).first();
+        Document found = usersCollection.find(new Document("name", "Bob")).first();
 
         assertNull(found, "Expected no document for name 'Bob'");
     }
 
     @Test
     void aggregateMatch_whenDocsExist_returnsMatchedDocuments() {
-        collection.insertMany(Arrays.asList(
+        usersCollection.insertMany(Arrays.asList(
             new Document("name", "Alice").append("age", 25),
             new Document("name", "Bob").append("age", 30),
             new Document("name", "Charlie").append("age", 20)
         ));
 
-        List<Document> results = collection.aggregate(Arrays.asList(
+        List<Document> results = usersCollection.aggregate(List.of(
                 new Document("$match", new Document("age", new Document("$gt", 20)))
         )).into(new ArrayList<>());
 
@@ -74,12 +73,12 @@ public class FongoTests {
     @Test
     void update_whenDocExists_updatesDocument() {
         Document doc = new Document("name", "Alice").append("age", 25);
-        collection.insertOne(doc);
+        usersCollection.insertOne(doc);
 
         Document update = new Document("$set", new Document("age", 26));
-        collection.updateOne(new Document("name", "Alice"), update);
+        usersCollection.updateOne(new Document("name", "Alice"), update);
 
-        Document updatedDoc = collection.find(new Document("name", "Alice")).first();
+        Document updatedDoc = usersCollection.find(new Document("name", "Alice")).first();
         assertNotNull(updatedDoc, "Expected to find updated document for 'Alice'");
         assertEquals(26, updatedDoc.getInteger("age"), "Age should be updated to 26");
     }
@@ -87,22 +86,22 @@ public class FongoTests {
     @Test
     void delete_whenDocExists_removesDocument() {
         Document doc = new Document("name", "Alice").append("age", 25);
-        collection.insertOne(doc);
+        usersCollection.insertOne(doc);
 
-        collection.deleteOne(new Document("name", "Alice"));
+        usersCollection.deleteOne(new Document("name", "Alice"));
 
-        Document deletedDoc = collection.find(new Document("name", "Alice")).first();
+        Document deletedDoc = usersCollection.find(new Document("name", "Alice")).first();
         assertNull(deletedDoc, "Expected document for 'Alice' to be deleted");
     }
 
     @Test
     void countDocuments_whenDocsInserted_returnsCorrectCount() {
-        collection.insertMany(Arrays.asList(
+        usersCollection.insertMany(Arrays.asList(
             new Document("name", "Alice").append("age", 25),
             new Document("name", "Bob").append("age", 30))
         );
 
-        long count = collection.count();
+        long count = usersCollection.count();
         assertEquals(2, count, "Expected count of documents to be 2");
     }
 }
